grammar.txt
expr    : KEYWORD:VAR ID EQ expr  
        : term ((PLUS|MINUS) term)*

term    : factor ((MUL|DIV) factor)*

factor  : (PLUS|MINUS) power


power   : atom(EXPONENT factor)*

atom    : INT|FLOAT|ID
        : LPAREN expr RPAREN 
